kubernetes/apps/base/vaultwarden/network.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all-except-namespace
  namespace: vaultwarden
spec:
  description: "Allow traffic only to the namespace itself"
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: vaultwarden
  ingress:
    - fromEndpoints:
        - matchLabels: {}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnpg-cluster
  namespace: vaultwarden
spec:
  description: "Allow CloudNativePG pods access"
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: vaultwarden-cluster
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: vaultwarden
            app.kubernetes.io/instance: vaultwarden
            app.kubernetes.io/name: vaultwarden
      toPorts:
        - ports:
            - port: postgresql
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vaultwarden-server
  namespace: vaultwarden
spec:
  description: "Allow traffic from and to vaultwarden server"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vaultwarden
      app.kubernetes.io/instance: vaultwarden
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy
            app.kubernetes.io/name: envoy
      toPorts:
        - ports:
            - port: http
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: pangolin
            app.kubernetes.io/name: pangolin
            app.kubernetes.io/component: newt
      toPorts:
        - ports:
            - port: http
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: maddy
            app.kubernetes.io/name: maddy
            app.kubernetes.io/instance: maddy
      toPorts:
        - ports:
            - port: smtp
              protocol: TCP
